--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drake's Portfolio</title>
+    <h1> Drake Alexander </h1>
 </head>
 <body>
     
