--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drake's Portfolio</title>
-    <h1> Drake Alexander </h1>
 </head>
 <body>
-    
+    <h1> Drake Alexander </h1>
+    <h2> Full stack developer in training</h2>
+    <h3> I am currently training to become an expert full stack developer capable in multiple languages.</h3> 
 </body>
 </html>
