--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1> Drake Alexander </h1>
     <h2> Full stack developer in training</h2>
     <h3> I am currently training to become an expert full stack developer capable in multiple languages.</h3> 
+    <a href="https://github.com/Drake-Alexander">Github</a>
 </body>
 </html>
