--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drake's Portfolio</title>
+    <p style="background-image: url('https://github.com/Drake-Alexander/First-Website/blob/main/depositphotos_339637922-stock-photo-dark-blue-abstract-surf-ink.jpg?raw=true');"></p>
 </head>
 <body>
     <h1> Drake Alexander </h1>
     <h2> Full stack developer in training</h2>
     <h3> I am currently training to become an expert full stack developer capable in multiple languages.</h3> 
     <a href="https://github.com/Drake-Alexander">Github</a>
+
+
+
+    <h4>About</h4>
+    <p>Hello! After I started working for Costco in 2021 I become very interested in learning how to code after I started utilizing scripts for my day to day tasks.
+         I started down an internet rabbit hole and now I have found myself here in the fascinating world of web dev.
+          Because all work and no play makes jack a very dull boy, I spend quite a bit of my free time with my kids, teaching my toddlers how to live and my pre teen how to function. 
+          I also spend some time with my wife and my dog.   </p>
 </body>
 </html>
