--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drake's Portfolio</title>
-    
+    <style>
+        p {
+          background-image: url('https://github.com/Drake-Alexander/First-Website/blob/main/depositphotos_339637922-stock-photo-dark-blue-abstract-surf-ink.jpg?raw=true');
+        }
+        </style>
 </head>
 <body>
-    <p style="background-image: url('https://github.com/Drake-Alexander/First-Website/blob/main/depositphotos_339637922-stock-photo-dark-blue-abstract-surf-ink.jpg?raw=true');"></p>
     <h1> Drake Alexander </h1>
     <h2> Full stack developer in training</h2>
     <h3> I am currently training to become an expert full stack developer capable in multiple languages.</h3> 
