--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drake's Portfolio</title>
     <style>
-        p {
-          background-image: url('https://github.com/Drake-Alexander/First-Website/blob/main/depositphotos_339637922-stock-photo-dark-blue-abstract-surf-ink.jpg?raw=true');
+        body {
+          background-image: url('https://www.freecodecamp.org/news/content/images/2022/09/jonatan-pie-3l3RwQdHRHg-unsplash.jpg');
         }
         </style>
 </head>
