trying to resize

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <style>
         body {
           background-image: url('https://www.freecodecamp.org/news/content/images/2022/09/jonatan-pie-3l3RwQdHRHg-unsplash.jpg');
-        }
+          background-size: auto;
+        }  
+        
         </style>
 </head>
 <body>
