--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
           background-image: url('https://www.freecodecamp.org/news/content/images/2022/09/jonatan-pie-3l3RwQdHRHg-unsplash.jpg');
-          background-size: auto;
+          background-size: 300px 100px;
         }  
         
         </style>
