--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
         </style>
 </head>
-<body>
+<body bgcolor="#ffffff">
     <h1> Drake Alexander </h1>
     <h2> Full stack developer in training</h2>
     <h3> I am currently training to become an expert full stack developer capable in multiple languages.</h3> 
