--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Drake's Portfolio</title>
     <style>
         body {
-          background-image: url('https://www.freecodecamp.org/news/content/images/2022/09/jonatan-pie-3l3RwQdHRHg-unsplash.jpg');
+          background-image: url('https://github.com/Drake-Alexander/First-Website/blob/main/Background.jpg?raw=true');
         }  
         
         </style>
@@ -13,7 +13,7 @@
 <body text="#ffffff" link="#ff0000" vlink="#ff0000" alink="#ff0000">
     <h1> Drake Alexander </h1>
     <h2> Full stack developer in training</h2>
-    <h3> I am currently training to become an expert full stack developer capable in multiple languages.</h3> 
+    <h3> I am currently training to become an expert full stack developer capable of multiple languages.</h3> 
     <a href="https://github.com/Drake-Alexander">Github</a>
 
 
