--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
          <section> 
             <ul> 
-                <LI> Costco Wholesale - current role Operations Supervisor <p>February 2021 - present</p> </LI>
-                <li> Oklahoma Correctional Security Officer <p>Octover 2019 - February 2021</p> </li>
-                <li> Walmart Supervisor Feburary <p>2019- October 2019</p> </li>
+                <LI> Costco Wholesale - current role - Operations Supervisor <p>February 2021 - present</p> </LI>
+                <li> Oklahoma Correctional Security Officer <p>October 2019 - February 2021</p> </li>
+                <li> Walmart Supervisor <p> Feburary 2019- October 2019</p> </li>
             </ul>
          </section>
 
