--- a/index.html
+++ b/index.html
@@ -4,27 +4,25 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Drake's Portfolio</title>
-
         <style>
         body {
           background-image: url('https://github.com/Drake-Alexander/First-Website/blob/main/Background.jpg?raw=true');
         }  
-        
         </style>
     </head>
     <body text="#ffffff" link="#ff0000" vlink="#ff0000" alink="#ff0000">
         <Header>
-             <h1> Drake Alexander </h1>
-             <h2> Full stack developer in training</h2>
-             <h3> I am currently training to become an expert full stack developer capable of multiple languages.</h3> 
+             <h1 style="color:orangered;"> Drake Alexander </h1>
+             <h2 style="color:orangered;"> Full stack developer in training</h2>
+             <h3 style="color:orangered;"> I am currently training to become an expert full stack developer capable of multiple languages.</h3> 
              <a href="https://github.com/Drake-Alexander">Github</a>
         </Header>
              <img align="right" src="https://github.com/Drake-Alexander/First-Website/blob/main/Profile%20image.jpg?raw=true" alt="An image of myself"
                 width="400"
                height="500"/>
          <secton>
-             <h4>About</h4>
-             <span>Hello! After I started working for Costco in 2021 I become very interested in learning how to code after I started utilizing scripts for my day to day tasks.
+             <h4 style="color:orangered;">About</h4>
+             <span style="color:orangered;">Hello! After I started working for Costco in 2021 I become very interested in learning how to code after I started utilizing scripts for my day to day tasks.
                I started down an internet rabbit hole and now I have found myself here in the fascinating world of web dev.
              When not immersed in the digital realm, I spend most of my time enjoying the precious moments guiding my little ones through the quirks of life 
              and helping a pre-teen navigate the perplexities of growing up. I also enjoy hanging out with my beloved spouse and my furry four-legged friend 
@@ -33,9 +31,9 @@
 
          <section> 
             <ul> 
-                <LI> Costco Wholesale - current role - Operations Supervisor <p>February 2021 - present</p> </LI>
-                <li> Oklahoma Correctional Security Officer <p>October 2019 - February 2021</p> </li>
-                <li> Walmart Supervisor <p> Feburary 2019- October 2019</p> </li>
+                <li > Costco Wholesale - current role - Operations Supervisor <p>February 2021 - present</p> </LI>
+                <li > Oklahoma Correctional Security Officer <p>October 2019 - February 2021</p> </li>
+                <li > Walmart Supervisor <p> Feburary 2019- October 2019</p> </li>
             </ul>
          </section>
 
