--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     </head>
     <body text="#ffffff" link="#ff0000" vlink="#ff0000" alink="#ff0000">
         <Header>
-             <h1 style="color:orangered;"> Drake Alexander </h1>
-             <h2 style="color:orangered;"> Full stack developer in training</h2>
-             <h3 style="color:orangered;"> I am currently training to become an expert full stack developer capable of multiple languages.</h3> 
+             <h1 style="color:rgb(247, 133, 91);"> Drake Alexander </h1>
+             <h2 style="color:rgb(247, 133, 91);"> Full stack developer in training</h2>
+             <h3 style="color:rgb(247, 133, 91);"> I am currently training to become an expert full stack developer capable of multiple languages.</h3> 
              <a href="https://github.com/Drake-Alexander">Github</a>
         </Header>
              <img align="right" src="https://github.com/Drake-Alexander/First-Website/blob/main/Profile%20image.jpg?raw=true" alt="An image of myself"
                 width="400"
                height="500"/>
          <secton>
-             <h4 style="color:orangered;">About</h4>
-             <span style="color:orangered;">Hello! After I started working for Costco in 2021 I become very interested in learning how to code after I started utilizing scripts for my day to day tasks.
+             <h4 style="color:rgb(247, 133, 91);">About</h4>
+             <span style="color:rgb(247, 133, 91);">Hello! After I started working for Costco in 2021 I become very interested in learning how to code after I started utilizing scripts for my day to day tasks.
                I started down an internet rabbit hole and now I have found myself here in the fascinating world of web dev.
              When not immersed in the digital realm, I spend most of my time enjoying the precious moments guiding my little ones through the quirks of life 
              and helping a pre-teen navigate the perplexities of growing up. I also enjoy hanging out with my beloved spouse and my furry four-legged friend 
@@ -44,5 +44,8 @@
                 <li> Project 3</li>
             </ol>
          </section>
+        
+         <footer>Loosely designed in google drawing and coded in visual studio code. </footer>
+
     </body>
 </html>
