changed how image is sized

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Drake's Portfolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body text="#ffffff" link="#ff0000" vlink="#ff0000" alink="#ff0000">
+    <body>
         <Header>
              <h1> Drake Alexander </h1>
              <h2> Full stack developer in training</h2>
@@ -14,8 +14,8 @@
              <a href="https://github.com/Drake-Alexander">Github</a>
         </Header>
              <img align="right" src="https://github.com/Drake-Alexander/First-Website/blob/main/Profile%20image.jpg?raw=true" alt="An image of myself"
-                width="400"
-               height="500"/>
+                width="40%"
+               height="50%"/>
          <secton>
              <h4>About</h4>
              <span>Hello! After I started working for Costco in 2021 I become very interested in learning how to code after I started utilizing scripts for my day to day tasks.
