added external js file

--- a/index.html
+++ b/index.html
@@ -5,17 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Drake's Portfolio</title>
         <link rel="stylesheet" href="style.css">
-        <script>
-            let name=prompt('Please let us know who you are;')
-            document.write('<p>Your name is ',name,'</p>');
-            confirm('are you sure?')
-
-            if(confirm('Do these pop ups annoy you?')){
-                document.write('<p>Okay I will remove them</p>');
-            } else {
-                document.write('<p> Thanks! I will add more!</p>');
-            }
-        </script>
+        <script src="app.js"></script>
         
     </head>
     <body>
