fixed error hopefully

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <Header>
-            <script>username()</script>
+            <script>username = username()</script>
             
              <h1> Drake Alexander </h1>
              <h2> Full stack developer in training</h2>
