--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     </head>
     <body>
         <Header>
-            <script>username = username()</script>
-            
              <h1> Drake Alexander </h1>
              <h2> Full stack developer in training</h2>
              <h3> I am currently training to become an expert full stack developer capable of multiple languages.</h3> 
@@ -28,7 +26,7 @@
              and helping a pre-teen navigate the perplexities of growing up. I also enjoy hanging out with my beloved spouse and my furry four-legged friend 
              The family unit is the beating heart of my world where laughter and learning go hand in hand.   </span>
          </secton>
-
+        <script>ratemypage()</script> 
          <section> 
             <ol> 
                 <li> Project 1</LI>
